# price_tracker

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
src/config/: enviroments.py
src/controllers/: link_controller.py  store_controller.py  telegram_controller.py
src/models/: product.py  store_config.py  telegram_config.py
src/scrapping/: scrapping_factory.py  scrapping_page.py  store_enum.py
src/scrapping/stores/: fallabella_store.py  oechsle_store.py  store_page.py
src/services/: link_service.py  scraping_service.py  store_service.py  telegram_service.py
src/util/: db_connection.py  init_db.py  pase_numero.py  scheduler.py  send_telegram.py
