[project]
name = "price-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
